crates/ferromark/tests/snapshots/renderer/relative_link_has_no_external_attrs.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "[guide](./guide.md)\n"
---
<p><a href="./guide.md">guide</a></p>
