crates/ferromark/tests/snapshots/renderer/sanitize_clears_unsafe_image_data_url.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "![x](data:text/html,<script>alert(1)</script>)\n"
---
<p><img src="" alt="x"></p>
