crates/ferromark/tests/snapshots/renderer/sanitize_escapes_html_block.snap
---
source: crates/ferromark/tests/snapshot_render.rs
assertion_line: 29
description: "<div><script>alert(1)</script></div>\n"
---
&lt;div&gt;&lt;script&gt;alert(1)&lt;/script&gt;&lt;/div&gt;
